projects/examples/source/02.06.cpp
/////////////////////////////////////

int main()
{
    [[maybe_unused]] int const x = 1;

//  ---------------------------------

//	x = 2; // error
}

/////////////////////////////////////